k8s-manifests/depyloment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: arielrahamim/wideops-nodeapp:1.0.0
        imagePullPolicy: "Always"
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 15m
